fix: remove | behind or separator

--- a/src/components/search/search.module.scss
+++ b/src/components/search/search.module.scss
@@ -63,26 +63,7 @@
 }
 
 .or-separator {
-  position: relative;
   color: var(--desatPurple10);
-  --distance: 4px;
-
-  &:before,
-  &:after {
-    content: '';
-    position: absolute;
-    left: 48%;
-    height: 7px;
-    border-left: 1px solid var(--sgs-color-border);
-  }
-
-  &:before {
-    top: -3px;
-  }
-
-  &:after {
-    bottom: -3px;
-  }
 }
 
 .sgs-search-results {
